Fix dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,10 @@
 
-.App {
+.OrbitalsApp {
   display: flex;
   text-align: center;
-  font-family: 'Courier New', Courier, monospace;
   font-size: 1rem;
   margin: auto;
   width: 100%;
-
   justify-content: center;
   align-items: center;
 }
@@ -20,10 +18,12 @@
 }
 
 .GlyphGenerator textarea {
+  color:var(--foreground);
   width: 100%;
   min-width: 100%;
   height:100px;
-  border: solid 1px lightgrey;
+  background-color: var(--background);
+  border: solid 1px var(--foreground-secondary);
   border-radius: 5px;
   margin: 0;
   padding: 10px;
@@ -71,4 +71,30 @@
   .GlyphContainer {
     grid-template-columns: repeat(2, 1fr);
   }
+}
+
+
+svg text {
+  fill: var(--foreground-secondary);
+}
+
+svg path, svg circle {
+  stroke: var(--foreground);
+}
+
+svg circle.startdot {
+  fill: var(--foreground);
+}
+
+label {
+  font-size: 0.8rem;
+  margin: 0;
+  padding: 0;
+  color: var(--primary-color);
+}
+
+select {
+  color: var(--foreground);
+  background-color: var(--background);
+  border: solid 1px var(--foreground-secondary);
 }
