--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,39 @@
+
+
+@media (prefers-color-scheme: light) {
+
+  :root {
+    --foreground: rgb(0, 0, 0);
+    --foreground-secondary: rgb(181, 181, 181);
+    --background: rgb(255, 255, 255);
+    --link-color:rgb(0, 0, 0);
+    --btn-background: rgba(53, 121, 255,1);
+    --primary-color: rgb(53, 164, 255);
+    --primary-background-color: rgba(53, 121, 255,1);
+  }
+}
+
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --foreground: rgb(255, 255, 255);
+    --foreground-secondary: rgb(150, 150, 150);
+    --background: rgb(18, 18, 33);
+    --link-color:rgb(255, 255, 255);
+    --btn-background: rgba(53, 121, 255,1);
+    --primary-color: rgb(53, 164, 255);
+    --primary-background-color: rgba(53, 121, 255,1);
+  }
+}
+
+
+[data-theme="dark"] {
+  --background: rgb(40,40,50);
+}
+
+
 html {
-  background-color: white;
+  background-color: var(--background);
   width:100%;
   height: 100%;
   margin:0;
@@ -7,8 +41,9 @@ html {
 }
 
 body {
-  color: black;
-  background-color: white;
+  font-family: 'Courier New', Courier, monospace;
+  color: var(--foreground);
+  background-color: var(--background);
   width:100%;
   height: 100%;
   margin:0;
@@ -17,16 +52,19 @@ body {
 } 
 
 h1 {
-  color: black;
   font-size: 2em;
   margin:0;
   padding:0;
 }
 
 p {
-  color: black;
   font-size: 1em;
   margin:0;
   padding:0;
   max-width: 500px;
 }
+
+a {
+  color: var(--foreground);
+}
+
